--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,11 +15,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "pages/boards/[boardId]/index.js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/cafe/[boardId]/index.js"],
   "exclude": ["node_modules"]
 }
