--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,4 +1,4 @@
-schema: http://backend08.codebootcamp.co.kr/graphql
+schema: http://34.145.93.33:3000/graphql
 generates:
   ./src/commons/types/generated/types.ts:
     plugins:
