--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@graphql-codegen/cli": "^2.11.8",
+    "animate.css": "^4.1.1",
     "antd": "^4.22.8",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
@@ -26,7 +27,10 @@
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-intersection": "^2.0.3",
+    "react-intersection-observer": "^9.4.0",
     "recoil": "^0.7.5",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
