--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-intersection": "^2.0.3",
     "react-intersection-observer": "^9.4.0",
+    "react-quill": "^2.0.0",
     "recoil": "^0.7.5",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
