--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.10.0",
     "@graphql-codegen/cli": "^2.11.8",
     "@hookform/resolvers": "^2.9.7",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "@toast-ui/editor": "^3.2.0",
     "animate.css": "^4.1.1",
     "antd": "^4.22.8",
