--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,18 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@toast-ui/editor": "^3.2.0",
+    "@types/dompurify": "^2.3.4",
+    "@types/uuid": "^8.3.4",
     "animate.css": "^4.1.1",
     "antd": "^4.22.8",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
+    "dompurify": "^2.4.0",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
