--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,18 +21,23 @@
     "@mui/material": "^5.10.4",
     "@toast-ui/editor": "^3.2.0",
     "@types/dompurify": "^2.3.4",
+    "@types/react-datepicker": "^4.4.2",
     "@types/uuid": "^8.3.4",
     "animate.css": "^4.1.1",
     "antd": "^4.22.8",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "dompurify": "^2.4.0",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
+    "react-day-picker": "^8.2.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
@@ -41,6 +46,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-quill": "^2.0.0",
     "recoil": "^0.7.5",
+    "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
