--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,12 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/cafe/[boardId]/index.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/cafe/[boardId]/index.js",
+    "pages/test/calendar.tsx"
+  ],
   "exclude": ["node_modules"]
 }
