--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,13 @@
     "@emotion/styled": "^11.10.0",
     "@graphql-codegen/cli": "^2.11.8",
     "@hookform/resolvers": "^2.9.7",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
+    "@mui/x-date-pickers": "^5.0.1",
     "@toast-ui/editor": "^3.2.0",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.0",
     "@types/dompurify": "^2.3.4",
     "@types/react-datepicker": "^4.4.2",
     "@types/uuid": "^8.3.4",
@@ -39,6 +43,7 @@
     "react-daum-postcode": "^3.1.1",
     "react-day-picker": "^8.2.1",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-infinite-scroller": "^1.2.6",
