--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.0",
     "@graphql-codegen/cli": "^2.11.8",
     "@hookform/resolvers": "^2.9.7",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
