Fix: typescript before deploy

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,7 +20,15 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/cafe/[boardId]/index.js",
-    "pages/test/calendar.tsx"
+    "pages/test/calendar.tsx",
+    "src/components/units/myPage/MyPage.styles.js",
+    "src/components/commons/mainPageQuestion/Q3.presenter.js",
+    "src/components/commons/mainPageQuestion/Q2.presenter.js",
+    "src/components/commons/mainPageQuestion/Q1.presenter.js",
+    "src/components/commons/mainPageQuestion/mainPageQuestion.types.js",
+    "src/components/commons/mainPageQuestion/mainPageQuestion.styles.js",
+    "src/components/commons/mainPageQuestion/mainPageQuestion.presenter.js",
+    "src/components/commons/mainPageQuestion/mainPageQuestion.container.js"
   ],
   "exclude": ["node_modules"]
 }
