--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-intersection": "^2.0.3",
     "react-intersection-observer": "^9.4.0",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
