--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,11 +17,9 @@
   },
   "include": [
     "next-env.d.ts",
-    "/*.ts",
-    "/*.tsx",
+    "**/*.ts",
+    "**/*.tsx",
     "pages/cafe/[boardId]/index.js",
-    "pages/test/calendar.tsx",
-    "src/components/units/myPage/MyPage.styles.js",
     "src/components/commons/mainPageQuestion/Q3.presenter.js",
     "src/components/commons/mainPageQuestion/Q2.presenter.js",
     "src/components/commons/mainPageQuestion/Q1.presenter.js",
