--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
