--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@toast-ui/react-editor": "^3.2.0",
     "@types/dompurify": "^2.3.4",
     "@types/react-datepicker": "^4.4.2",
+    "@types/react-slick": "^0.23.10",
     "@types/uuid": "^8.3.4",
     "animate.css": "^4.1.1",
     "antd": "^4.22.8",
@@ -55,6 +56,7 @@
     "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.1",
     "recoil": "^0.7.5",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
