Update: global css

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.1",
+    "react-transition-group": "^4.4.5",
     "recoil": "^0.7.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
