--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.0",
     "@types/dompurify": "^2.3.4",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-slick": "^0.23.10",
     "@types/uuid": "^8.3.4",
@@ -42,6 +43,7 @@
     "moment-timezone": "^0.5.37",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.8",
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-day-picker": "^8.2.1",
